--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "babel-plugin-superjson-next": "^0.4.5",
     "csstype": "^3.1.1",
     "next": "13.0.2",
     "next-auth": "4.17.0",
+    "next-superjson-plugin": "^0.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
